# modseq

./: .gitignore  meson.build
data/: meson.build  modseq.gresource.xml  org.katwulff.modseq.appdata.xml.in  org.katwulff.modseq.desktop.in  org.katwulff.modseq.gschema.xml
data/icons/: meson.build
data/ui/: help-overlay.ui  preferences-window.ui  sequencer-row.ui  sidebar.ui  window.ui
po/: POTFILES  meson.build
src/: config.vapi  meson.build
src/modseq/: app.vala  main.vala  meson.build
src/modseq/ui/: sequencer-row.vala  sidebar.vala  window.vala
vapi/: lilv.vapi
